test/classes/initializers/constAndParamInHeader.good
constAndParamInHeader.chpl:6: In initializer 'Foo':
constAndParamInHeader.chpl:6: error: invalid access of class member in initializer header
constAndParamInHeader.chpl:14: In initializer 'Bar':
constAndParamInHeader.chpl:14: error: invalid access of class member in initializer header
